[tool.poetry]
name = "user-manager"
version = "0.1.0"
description = ""
authors = ["Artem.potashov <artem.potashov@bk.ru>"]
readme = "README.md"
packages = [{include = "user_manager"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
asyncpg = "^0.30.0"
litestar = { extras = ["standard"], version = "^2" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"
bcrypt = "^4.3.0"
passlib = "^1.7.4"
pydantic = "^2.11.4"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
